[package]
name = "rustsweeper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustsweeper"
path = "src/main.rs"

[lib]
name = "game"
path = "src/game/game.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]"]
git = "https://github.com/microsoft/vcpkg"
tag = "2023.02.24"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }